--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 
         <div class="content">
             <div class="content__uppi">
-                <button class="uppi__kassi">
-                    <h2 class="uppi__kassi__content">Læra</h2>
-                    <h4 class="uppi__kassi__content">30 mín</h4>
+                <button class="uppi__kassi" id="uppi__laera">
+                    <h2 class="uppi__kassi__content" id="uppi__kassi__content11">Læra</h2>
+                    <h4 class="uppi__kassi__content" id="uppi__kassi__content12">30 mín</h4>
                 </button>
                 <button class="uppi__kassi" id="uppi__pasa">
                     <h2 class="uppi__kassi__content" id="uppi__kassi__content21">Pása</h2>
